--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ addons:
 script:
   - mkdir build && cd build
   - cmake .. -DCMAKE_BUILD_TYPE=Debug
-  - cmake . --build -- -j 4
+  - cmake --build . -- -j4
