--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,22 @@
 cmake_minimum_required(VERSION 3.12.0 FATAL_ERROR) 
 
-project(lemni-lang VERSION 0.1.0 LANGUAGES CXX C)
+project(
+	lemni-lang
+	DESCRIPTION "The Lemni programming language"
+	VERSION 0.1.0
+	LANGUAGES CXX C
+)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake)
 
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
+
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+	add_compile_options("-fconcepts")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+	add_compile_options("-fconcepts")
+endif()
 
 set(LEMNI_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
 
@@ -23,6 +34,10 @@ set(
 	${LEMNI_INCLUDE_DIR}/lemni/parse.h
 	${LEMNI_INCLUDE_DIR}/lemni/Interop.h
 	${LEMNI_INCLUDE_DIR}/lemni/Type.h
+	${LEMNI_INCLUDE_DIR}/lemni/TypedExpr.h
+	${LEMNI_INCLUDE_DIR}/lemni/typecheck.h
+	${LEMNI_INCLUDE_DIR}/lemni/Value.h
+	${LEMNI_INCLUDE_DIR}/lemni/eval.h
 )
 
 include_directories(include)
@@ -32,6 +47,8 @@ set(UTF8_INSTALL OFF CACHE BOOL "" FORCE)
 set(UTF8_SAMPLES OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(deps/utfcpp)
+add_subdirectory(deps/replxx)
 
 add_subdirectory(lib)
+add_subdirectory(repl)
 add_subdirectory(testall)
