--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,17 @@ compiler: gcc
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
       - cmake-data
       - cmake
       - libgmp-dev
       - libmpfr-dev
       - libicu-dev
+      - gcc-9
 
 script:
   - mkdir build && cd build
-  - cmake .. -DCMAKE_BUILD_TYPE=Debug
+  - CC=gcc-9 CXX=g++-9 cmake .. -DCMAKE_BUILD_TYPE=Debug
   - cmake --build . -- -j4
