added simple FFI and basic tutorial to REPL

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,12 @@
 [submodule "deps/replxx"]
 	path = deps/replxx
 	url = https://github.com/AmokHuginnsson/replxx.git
+[submodule "deps/fmt"]
+	path = deps/fmt
+	url = https://github.com/fmtlib/fmt.git
+[submodule "deps/layout"]
+	path = deps/layout
+	url = https://github.com/randrew/layout.git
+[submodule "deps/imtui"]
+	path = deps/imtui
+	url = https://github.com/ggerganov/imtui.git
