--- a/repl/CMakeLists.txt
+++ b/repl/CMakeLists.txt
@@ -5,4 +5,6 @@ set(
 
 add_executable(lemni-repl ${LEMNI_REPL_SOURCES})
 
-target_link_libraries(lemni-repl utf8::cpp replxx lemni)
+set_target_properties(lemni-repl PROPERTIES ENABLE_EXPORTS TRUE)
+
+target_link_libraries(lemni-repl utf8::cpp fmt::fmt replxx imtui-ncurses lemni)
